# transcribe

./: .gitignore  LICENSE  README.md  pyproject.toml
src/interview_transcribe/: cli.py
